early draft of improved example entities (not all running yet, but then weren't all running before...)