@@ -68,7 +68,7 @@ public abstract class WebAppWideAreaExample extends AbstractApplication {
                 displayNameSuffix : ' web cluster',
                 newEntity : this.&newWebCluster);
 
-    private DynamicGroup nginxEntities = new DynamicGroup([displayName: 'Web Fronts'], this, { Entity e -> (e instanceof NginxController) })
+    private DynamicGroup nginxEntities = new DynamicGroup(this, name: 'Web Fronts', { it in NginxController })
     private GeoscalingDnsService geoDns = new GeoscalingDnsService(this,
             displayName: 'Geo-DNS',
             username: config.getFirst("brooklyn.geoscaling.username", defaultIfNone:'cloudsoft'), 
@@ -89,15 +89,18 @@ public abstract class WebAppWideAreaExample extends AbstractApplication {
     
 }
 
-/** JBoss is already the default but this makes it explicit */
+/** JBoss is already the default but this makes it explicit;
+ * run with:
+ * 
+ *  java -Xmx512m -Xms128m -XX:MaxPermSize=256m -cp target/brooklyn-example-0.2.0-SNAPSHOT-with-dependencies.jar brooklyn.demo.WebAppWideAreaExample */
 public class JBoss7WideAreaExample extends WebAppWideAreaExample {
     public static void main(String[] argv) {
         List<Location> locations = [] 
             //Locations.getLocationsById(Arrays.asList(argv) ?: DEFAULT_LOCATIONS)
         locations += new LocalhostMachineProvisioningLocation()
         
-        def f = JcloudsLocationFactory.newAmazonWebServicesInstance(config)
-        ["eu-west-1", "us-west-1", "ap-southeast-1"].each { locations += f.newLocation(it) }
+        //def f = JcloudsLocationFactory.newAmazonWebServicesInstance(config)
+        //["eu-west-1", "us-west-1", "ap-southeast-1"].each { locations += f.newLocation(it) }
 
         JBoss7WideAreaExample app = new JBoss7WideAreaExample(displayName:'Brooklyn Wide-Area Seam Booking Example Application')
         
